src/test/deca/context/invalid/assign-compatible.context
assign-compatible.deca:4:
